# tenori-ish

./: Cargo.toml
src/: dialog.rs  envelope.rs  grid.rs  gui.rs  main.rs  noise.rs  nome.rs  saveload.rs  scale.rs  tenori.rs  timbre.rs
