[package]
name = "tenori-ish"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.3"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
rodio = { version = "0.21.1", features = ["noise"] }
toml = "0.9.7"
serde = { version = "1.0.227", features = ["derive"] }
rfd = "0.15.4"
color = "0.3.2"
rand = "0.9.2"
